<resources>
    <string name="app_name">KHARREDO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="add_to_cart">Add to Cart</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="description">Description:</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop_publishing_software_like_aldus_pagemaker_including_versions_of_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="latest_products">Latest Products</string>
    <string name="flash_sales">Flash Sales</string>
    <string name="featured_products">Featured Products</string>
    <string name="show_more"><![CDATA[Show More >]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_login">Login</string>
    <string name="menu_sign_up">Sign Up</string>
    <string name="menu_vendor_account">Vendor Account</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_about_us">About Us</string>


    <string name="sign_up_as_vendor">Sign Up As Vendor</string>
    <string name="sign_up_as_customer">Sign Up As Customer</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="company">Company</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="phone">Phone</string>


    <!---On Board-->


    <string name="ob_header1">M-COMMERCE</string>
    <string name="ob_header2">DELIVERY SERVICE</string>
    <string name="ob_header3">ORDER ONLINE</string>

    <string name="ob_get_started">GET STARTED</string>

    <string name="ob_desc1">Download our shopping application \n and buy using your smartphone \n or laptop</string>
    <string name="ob_desc2">Modern delivery technologies \n shipping you the porch of you \n apartments</string>
    <string name="ob_desc3">Make an order sitting in home \n pay and choose online</string>
</resources>
