<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_login_black_24dp"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_sign_up_black_24dp"
            android:title="@string/menu_sign_up" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_vendor_account_black_24dp"
            android:title="@string/menu_vendor_account" />


        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_contact_black_24dp"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_about_black_24dp"
            android:title="@string/menu_about_us" />


    </group>
</menu>
