<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizental_margin"
    android:paddingEnd="@dimen/activity_horizental_margin"
    android:paddingTop="50dp"
    android:background="@android:color/transparent"
    >

  <!--  <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:src="@drawable/khareedo"/>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Join Us !"
        android:textColor="@color/colorPrimary"
        style="@style/TextAppearance.MaterialComponents.Headline3"
        android:layout_gravity="start"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_vertical_margin"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/v_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:singleLine="true"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_vertical_margin"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/v_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/last_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_vertical_margin"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/v_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_vertical_margin"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/v_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:singleLine="true"
            android:inputType="textPassword"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:passwordToggleEnabled="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_vertical_margin"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/v_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:singleLine="true"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_vertical_margin"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/v_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/address" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:background="@drawable/button_radius"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up" />

</LinearLayout>


