<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="100dp"
    android:paddingStart="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_vertical_margin"
    android:background="@drawable/footer">


   <!-- <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:src="@drawable/khareedo"/>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome !"
        android:textColor="@color/colorPrimary"
        style="@style/TextAppearance.MaterialComponents.Headline3"
        android:layout_gravity="start"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_vertical_margin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/email"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_vertical_margin"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginBottom="@dimen/form_vertical_margin"
        />


    <Button
        android:id="@+id/login_btn"
        android:background="@drawable/button_radius"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/form_vertical_margin"
        android:text="@string/menu_login" />

    <!--<Button
        android:background="@drawable/button_radius"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_vertical_margin"
        android:layout_gravity="center"
        android:text="@string/sign_up_as_customer" />

    <Button
        android:background="@drawable/button_radius"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up_as_vendor" />-->

</LinearLayout>